Designed not-found page content

--- a/src/app/features/about/pages/about/about.component.html
+++ b/src/app/features/about/pages/about/about.component.html
@@ -1,32 +1,24 @@
 <div class="about-page-main" id="about-page-main">
-  <div class="page-content-intro-hr">background</div>
+  <div class="page-content-intro-hr">developer | portfolio </div>
 
   <div class="about-content">
     <div class="about-container">
-      <div class="set-heading">about me</div>
+      <div class="set-heading">about developer</div>
       <div class="set-container">
         <p>
-          <i class="bi bi-bookmark-fill"></i> I’m a passionate Frontend
+          <i class="bi bi-exclamation-square-fill"></i> I’m a passionate Frontend
           Developer with a strong focus on building high-performance single-page
-          applications using Angular framework.
+          applications using Angular framework. 
+          Angular framework architecture allows me to create maintainable and robust applications that provide an excellent user experience.
         </p>
       </div>
     </div>
-    <div class="about-container background">
-      <div class="set-heading">Background</div>
-      <div class="set-container">
-        <p>
-          <i class="bi bi-bookmark-fill"></i> My journey into front-end
-          development led me to discover Angular's robust framework, and I've
-          since focused on crafting intuitive and efficient user interfaces.
-        </p>
-      </div>
-    </div>
+   
     <div class="about-container">
       <div class="set-heading">skills & expertise</div>
       <div class="set-container">
         <p>
-          <i class="bi bi-bookmark-fill"></i> Proficient in
+          <i class="bi bi-exclamation-square-fill"></i> Proficient in
           <span class="key-skills">Responsive UI Designs</span>,
           <span class="key-skills">Angular 16+</span>,
           <span class="key-skills">TypeScript</span>,
@@ -48,16 +40,30 @@
         </div>
       </div>
     </div>
-
+    
     <div class="about-container portfolio">
       <div class="set-heading">portfolio</div>
       <div class="set-container">
         <p>
-          <i class="bi bi-bookmark-fill"></i> This portfolio serves as a
+          <i class="bi bi-exclamation-square-fill"></i> This portfolio serves as a
           demonstration of my technical proficiency, problem-solving abilities,
           and dedication to creating exceptional user experiences.
         </p>
       </div>
     </div>
+
+     <div class="about-container background">
+      <div class="set-heading">Background</div>
+      <div class="set-container">
+        <p>
+          <i class="bi bi-exclamation-square-fill"></i> My journey into front-end
+          development led me to discover Angular's robust framework, and I've
+          since focused on crafting intuitive and efficient user interfaces.
+        </p>
+      </div>
+    </div>
+
   </div>
 </div>
+
+
