--- a/src/app/features/not-found/pages/not-found/not-found.component.html
+++ b/src/app/features/not-found/pages/not-found/not-found.component.html
@@ -1,1 +1,23 @@
-<p>not-found works!</p>
+<div id="not-found-page-main" class="not-found-page-main">
+  <div class="page-content-intro-hr">Sorry!</div>
+
+  <div class="not-found-content">
+    <div class="not-found-container">
+      <div class="heading">not found</div>
+      <div class="content">
+        <p>
+          Oops! It looks like you've landed in the wrong place. The page you're
+          looking for doesn't exist. Let's get you back on track
+        </p>
+
+        <p>Please contact the Web Administrator for further assistance.</p>
+
+        <div class="btn-container">
+          <div name="contact" class="contact" (click)="redirectToProjects()">
+            contact adminnistrator
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
