--- a/src/app/features/skills-set/pages/skills-set/skills-set.component.html
+++ b/src/app/features/skills-set/pages/skills-set/skills-set.component.html
@@ -1,5 +1,5 @@
 <div class="skils-set-page-main" id="skils-set-page-main">
-  <div class="page-content-intro-hr">skills, tech, and tools</div>
+  <div class="page-content-intro-hr">skills set | tech stack</div>
 
   <div class="sets-container">
     <div class="set-container">
