--- a/src/app/features/home/pages/home/home.component.html
+++ b/src/app/features/home/pages/home/home.component.html
@@ -48,27 +48,25 @@
   <!-- <div class="page-content-intro-hr">INTRODUCTION</div> -->
 
   <div class="homepage-content-section intro-container">
-    
     <div class="developer-name">Hi, I’m <span class="name">Yingi</span></div>
-    <div class="developer-title"> Front-End Developer</div>
+    <div class="developer-title">Front-End Developer</div>
 
+       <div class="skills-container">
+      <div class="skill"> <i class="bi bi-check-circle-fill"></i>Responsive UI</div>
+      <div class="skill"><i class="bi bi-check-circle-fill"></i>Angular</div>
+      <div class="skill"><i class="bi bi-check-circle-fill"></i>RESTful API</div>
+      <div class="skill"><i class="bi bi-check-circle-fill"></i>Unit Testing</div>
+      <div class="skill"><i class="bi bi-check-circle-fill"></i>Git and GitHub</div>
+
+    </div>
     <p>
       I craft responsive, scalable, and user-friendly Single-Page applications
-      (<span class="highlight">SPA</span>) that are clean, and robust using
-      <span class="highlight">Angular Framework</span>. My expertise includes
-      Responsive UI Designs, JavaScrip, TypeScript, RxJS, NgRx, and REST API Integration, along
-      with Unit Testing, Git and GitHub.
+      (SPA) using
+      <span class="highlight">Angular Framework</span>. 
+      The structured, component-based architecture of Angular allows me to create clean, maintainable, and robust applications that provide an excellent user experience.
     </p>
 
     <div class="intro-btn-container">
-      <!-- <button
-        type="button"
-        class="intro-btn projects-btn"
-        (click)="redirectToProjects()"
-      >
-        <i class="bi bi-app-indicator"></i>
-        Projects
-      </button> -->
       <button
         type="button"
         class="intro-btn gitHub-btn"
@@ -77,13 +75,14 @@
         <i class="bi bi-github"></i>
         GitHub
       </button>
+
       <button
         type="button"
         class="intro-btn linkedin-btn"
         (click)="openHyperLink(linkedIn)"
       >
         <i class="bi bi-linkedin"></i>
-        linkedIn
+        LinkedIn
       </button>
     </div>
   </div>
