--- a/src/styles/themes/_light.scss
+++ b/src/styles/themes/_light.scss
@@ -4,15 +4,22 @@
     :root {
         --bg-color: #ffffff;
         --text-color: $light-default-font-color;
+        $primary: #000;
 
-                 $primary: #000;
         #main-navbar {
             background-color: $primary;
+
             .navbar {
-                background-color: $primary;   
+                background-color: $primary;
+            }
+
+            .page-content-intro-hr {
+
+                &::before,
+                &::after {
+                    border-bottom: 1px solid #e5e5e5;
+                }
             }
         }
     }
-
-
 }
