--- a/src/app/layout/footer/footer/footer.component.html
+++ b/src/app/layout/footer/footer/footer.component.html
@@ -37,15 +37,15 @@
           >
         </li>
         <li>
-          <a href="https://www.typescriptlang.org/" target="_blank">
+          <a href="https://www.typescriptlang.org/" target="_blank" rel="noopener">
             Learn - TypeScript</a
           >
         </li>
         <li>
-          <a href="https://angular.io/" target="_blank"> Learn - Angular</a>
+          <a href="https://angular.io/" target="_blank" rel="noopener"> Learn - Angular</a>
         </li>
         <li>
-          <a href="https://javascript.info/" target="_blank">
+          <a href="https://javascript.info/" target="_blank" rel="noopener">
             Learn - JavaScript
           </a>
         </li>
@@ -82,6 +82,7 @@
       href="https://wa.me/27796910468?text=Good day, I would like to hear more about your Angular Front-End Development. Please let me for know if you are available for discussion. Thank you."
       class="whats-app-btn"
       target="_blank"
+      rel="noopener"
     >
       <i class="bi bi-whatsapp whats-app-icon"></i>
     </a>
