Re-aligned the home page skills

--- a/src/app/features/home/pages/home/home.component.html
+++ b/src/app/features/home/pages/home/home.component.html
@@ -52,11 +52,11 @@
     <div class="developer-title">Front-End Developer</div>
 
        <div class="skills-container">
-      <div class="skill"> <i class="bi bi-check-circle-fill"></i>Responsive UI</div>
-      <div class="skill"><i class="bi bi-check-circle-fill"></i>Angular</div>
-      <div class="skill"><i class="bi bi-check-circle-fill"></i>RESTful API</div>
+      <div class="skill"> <i class="bi bi-check-circle-fill"></i>Responsive UI Design</div>
+      <div class="skill"><i class="bi bi-check-circle-fill"></i>Angular/TypeScript</div>
+      <div class="skill"><i class="bi bi-check-circle-fill"></i>RESTful API </div>
       <div class="skill"><i class="bi bi-check-circle-fill"></i>Unit Testing</div>
-      <div class="skill"><i class="bi bi-check-circle-fill"></i>Git and GitHub</div>
+      <div class="skill"><i class="bi bi-check-circle-fill"></i>Source Control (GitHub)</div>
 
     </div>
     <p>
