--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -125,7 +125,7 @@
                 background-color: $light-secondery-bg-color;
                 padding: $spacing-xxs $spacing-sm;
                  border-radius: $spacing-md;
-                 
+                 text-align: left;
                  min-width: 156px;
                  i {
                     margin-right: 5px;
