--- a/src/styles/abstracts/_mixins.scss
+++ b/src/styles/abstracts/_mixins.scss
@@ -16,6 +16,57 @@
   }
 }
 
+@mixin theme-toggle-btn {
+
+  /* Container for the toggle */
+  .toggle-switch {
+    position: relative;
+    display: inline-block;
+    width: 50px;
+    height: 24px;
+  }
+
+  /* Hide default checkbox */
+  .toggle-switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+  }
+
+  /* The track */
+  .slider {
+    position: absolute;
+    cursor: pointer;
+    background-color: $light-primary-bg-color;
+    border-radius: 24px;
+    width: 100%;
+    height: 100%;
+    transition: background-color 0.3s;
+
+    &::before {
+      content: "";
+      position: absolute;
+      height: 20px;
+      width: 20px;
+      left: 4px;
+      bottom: 2px;
+      background-color: white;
+      border-radius: 50%;
+      transition: transform 0.3s;
+    }
+  }
+
+  /* Toggled state */
+  .toggle-switch input:checked+.slider {
+    background-color: $light-default-font-color;
+  }
+
+  .toggle-switch input:checked+.slider::before {
+    transform: translateX(26px);
+  }
+
+}
+
 @mixin page-content-intro-hr {
 
   display: flex;
@@ -117,7 +168,7 @@
 
 @mixin heading-light {
   text-transform: uppercase;
-  background-color: $light-primary-bg-color;
+  background-color: $light-secondery-bg-color;
   border-radius: $spacing-xxs;
   padding: $spacing-xs $spacing-sm;
   font-weight: bold;
