--- a/src/styles/layout/_footer.scss
+++ b/src/styles/layout/_footer.scss
@@ -140,7 +140,7 @@
     }
 
     .footer-bottom-section {
-        background-color: $light-primary-bg-color;
+        background-color: $light-secondery-bg-color;
         padding: $spacing-sm;
         font-size: $font-size-sm + 2px;
         border-radius: $spacing-xs;
