--- a/src/styles/layout/_header.scss
+++ b/src/styles/layout/_header.scss
@@ -35,6 +35,7 @@
                 .site-theme {
                     display: none;
                     cursor: pointer;
+                    @include theme-toggle-btn;
                 }
             }
 
@@ -55,7 +56,7 @@
 
             .site-contact-text {
                 margin: 0 5px;
-                font-size: $font-size-md;
+                font-size: $font-size-md - 2px;
 
                 .contact-icon {
                     margin-right: $spacing-xs + 1px;
@@ -65,6 +66,8 @@
                     text-decoration: none;
                     color: $light-default-font-color;
                 }
+
+                // @include theme-toggle-btn ;
 
                 &.theme-button {
                     cursor: pointer;
@@ -116,7 +119,6 @@
                         display: block;
                         font-size: $font-size-lg;
                         cursor: pointer;
-                        // border: 1px solid #e5e5e5;
                     }
                 }
 
